ya anda el ng-select para tiposOrganizacion

--- a/Angular/src/app/home/home.component.html
+++ b/Angular/src/app/home/home.component.html
@@ -1,6 +1,8 @@
 <div class="m-3">
     <div *ngIf="isLoggedIn">
-        <p>Hola <b>{{ username }}</b></p>
+        <p>
+            Hola <b>{{ username }}</b>
+        </p>
         <p>Navegá a una de las rutas para usar la app</p>
     </div>
     <div *ngIf="!isLoggedIn">
