--- a/Angular/src/app/navbar/navbar.component.html
+++ b/Angular/src/app/navbar/navbar.component.html
@@ -6,6 +6,9 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/organizacion/crear" routerLinkActive="active">CrearOrg</a>
+                </li>
             </ul>
             <ul class="navbar-nav ms-auto">
                 <li *ngIf="!authService.isAuthenticated" class="nav-item">
