--- a/Angular/src/app/organizacion/crear-organizacion/crear-organizacion.component.html
+++ b/Angular/src/app/organizacion/crear-organizacion/crear-organizacion.component.html
@@ -1,12 +1,10 @@
 <div class="m-3">
-    <!-- [formGroup]="crearOrganizacionForm" -->
-    <form (ngSubmit)="onSubmit()" class="mb-3">
-        <div class="row">
-            <div class="col">
-                <label for="razonSocial" class="form-label"
-                    >Razon social:
+    <form (ngSubmit)="onSubmit()" class="mb-3" #crearOrganizacionForm="ngForm">
+        <div class="row mb-3">
+            <div class="col-4">
+                <label for="razonSocial" class="form-label">
+                    Razon social
                 </label>
-                <!-- formControlName="razonSocial" -->
                 <input
                     type="text"
                     id="razonSocial"
@@ -16,19 +14,62 @@
                     name="razonSocial"
                 />
             </div>
-
-            <div class="col">
-                <label for="tipoOrganizacion" class="form-label"
-                    >Tipo organizacion:
+            <div class="col-4">
+                <label for="tipoOrganizacion" class="form-label">
+                    Tipo organizacion
                 </label>
                 <app-tipo-organizacion-select
                     [(selected)]="organizacion.tipoOrganizacion"
                     id="tipoOrganizacion"
                 ></app-tipo-organizacion-select>
             </div>
+            <div class="col-4">
+                <label for="clasificacion" class="form-label">
+                    Clasificacion (TODO: cambiar DDL)
+                </label>
+                <app-tipo-organizacion-select
+                    [(selected)]="organizacion.clasificacion"
+                    id="clasificacion"
+                ></app-tipo-organizacion-select>
+            </div>
         </div>
 
-        <!-- [disabled]="!crearOrganizacionForm.valid" -->
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <div class="row mb-3">
+            <div class="col-4">
+                <label for="cantDiasHabilesPorSemana" class="form-label">
+                    Cantidad de dias habiles
+                </label>
+                <input
+                    type="number"
+                    id="cantDiasHabilesPorSemana"
+                    class="form-control"
+                    required
+                    [(ngModel)]="organizacion.cantDiasHabilesPorSemana"
+                    name="cantDiasHabilesPorSemana"
+                />
+            </div>
+            <div class="col-3">
+                <label for="factorK" class="form-label"> Factor K </label>
+                <div class="input-group">
+                    <input
+                        type="number"
+                        id="factorK"
+                        class="form-control"
+                        required
+                        [(ngModel)]="organizacion.factorK.valor"
+                        name="factorK"
+                    />
+                    <app-unidad-select
+                        class="form-control"
+                        [(selected)]="organizacion.factorK.unidad"
+                        id="clasificacion"
+                    ></app-unidad-select>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
     </form>
 </div>
