--- a/Angular/src/app/navbar/navbar.component.html
+++ b/Angular/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
                     <a class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/organizacion/crear" routerLinkActive="active">CrearOrg</a>
+                    <a class="nav-link" routerLink="/organizacion" routerLinkActive="active">Organizaciones</a>
                 </li>
             </ul>
             <ul class="navbar-nav ms-auto">
