--- a/Angular/src/app/organizacion/organizacion-details.html
+++ b/Angular/src/app/organizacion/organizacion-details.html
@@ -1,5 +1,5 @@
 <div class="m-3">
-    <form (ngSubmit)="onSubmit()" class="mb-3" #crearOrganizacionForm="ngForm">
+    <form (ngSubmit)="onSubmit()" class="mb-3" #form="ngForm">
         <div class="row mb-3">
             <div class="col-4">
                 <label for="razonSocial" class="form-label">
