--- a/Angular/src/app/organizacion/index-organizacion/index-organizacion.component.html
+++ b/Angular/src/app/organizacion/index-organizacion/index-organizacion.component.html
@@ -11,7 +11,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let organizacion of organizaciones">
+            <tr *ngFor="let organizacion of organizaciones$ | async">
                 <td>{{ organizacion.razonSocial }}</td>
                 <td>{{ organizacion.tipoOrganizacion!.text }}</td>
                 <td>{{ organizacion.clasificacion!.text }}</td>
