minis mejoras en los modelos
El id deja de ser nulleable, su valor por defecto es 0

--- a/Angular/src/app/organizacion/index-organizacion/index-organizacion.component.html
+++ b/Angular/src/app/organizacion/index-organizacion/index-organizacion.component.html
@@ -20,7 +20,7 @@
                 <td>
                     <button
                         type="button"
-                        (click)="editEntidad(organizacion.id!)"
+                        (click)="editEntidad(organizacion.id)"
                         class="btn btn-info"
                     >
                         Editar
