meto pantalla para cargar mediciones con Excel

--- a/Angular/src/app/navbar/navbar.component.html
+++ b/Angular/src/app/navbar/navbar.component.html
@@ -9,6 +9,9 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/organizacion" routerLinkActive="active">Organizaciones</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/medicion" routerLinkActive="active">Cargar mediciones</a>
+                </li>
             </ul>
             <ul class="navbar-nav ms-auto">
                 <li *ngIf="!authService.isAuthenticated" class="nav-item">
