Creo pantalla de sectores

--- a/Angular/src/app/navbar/navbar.component.html
+++ b/Angular/src/app/navbar/navbar.component.html
@@ -12,6 +12,9 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/medicion" routerLinkActive="active">Cargar mediciones</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/sector" routerLinkActive="active">Sectores</a>
+                </li>
             </ul>
             <ul class="navbar-nav ms-auto">
                 <li *ngIf="!authService.isAuthenticated" class="nav-item">
