--- a/Angular/src/app/templates/index-template/index-template.component.html
+++ b/Angular/src/app/templates/index-template/index-template.component.html
@@ -1,5 +1,5 @@
 <div class="m-3">
-    <button type="button" (click)="crearEntidad()" class="btn btn-primary">
+    <button type="button" *ngIf="supportsCreate" (click)="crearEntidad()" class="btn btn-primary">
         Crear
     </button>
     <ng-content></ng-content>
