--- a/Angular/src/app/navbar/navbar.component.html
+++ b/Angular/src/app/navbar/navbar.component.html
@@ -15,6 +15,9 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/sector" routerLinkActive="active">Sectores</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/persona" routerLinkActive="active">Personas</a>
+                </li>
             </ul>
             <ul class="navbar-nav ms-auto">
                 <li *ngIf="!authService.isAuthenticated" class="nav-item">
