--- a/Angular/src/app/navbar/navbar.component.html
+++ b/Angular/src/app/navbar/navbar.component.html
@@ -21,6 +21,9 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/miembro" routerLinkActive="active">Miembros</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/solicitud" routerLinkActive="active">Solicitudes</a>
+                </li>
             </ul>
             <ul class="navbar-nav ms-auto">
                 <li *ngIf="!authService.isAuthenticated" class="nav-item">
