--- a/Angular/src/app/organizacion/index-organizacion/index-organizacion.component.html
+++ b/Angular/src/app/organizacion/index-organizacion/index-organizacion.component.html
@@ -36,4 +36,26 @@
             </tr>
         </tbody>
     </table>
+
+    <button type="button" onclick="prueba" class="btn btn-primary">
+        Listar Organizaciones
+    </button>
+
 </app-index-template>
+
+
+<script lang="ts">
+    import { AuthService } from '../auth/auth.service';
+    async function prueba(){
+        return fetch("http://localhost:8080/organizacionLiviano", {
+            method: 'GET',
+            headers: {
+                'Content-Type': 'application/json',
+                Authorization: 'Bearer'  + this.authService.loggedUser.accessToken ,
+                'X-Custom-Header': 'header value'
+
+            }
+        })
+    }
+
+</script>
