Cambio nombre de variables en la View

--- a/API/src/main/resources/templates/cliente_liviano_listar_miembros.hbs
+++ b/API/src/main/resources/templates/cliente_liviano_listar_miembros.hbs
@@ -18,7 +18,7 @@
                 <th>Organizacion</th>
                 <!-- <th>{{idSolicitud}}</th> -->
             </tr>
-            {{#each listamiembros}}
+            {{#each listaMiembros}}
                 <tr>
                     <td>{{id}}</td>
                     <td>{{persona.text}}</td>
