--- a/API/src/main/resources/templates/cliente_liviano_listar_organizaciones.hbs
+++ b/API/src/main/resources/templates/cliente_liviano_listar_organizaciones.hbs
@@ -18,7 +18,7 @@
                 <th>Dias habiles por semana</th>
                 <th>Factor K</th>
             </tr>
-            {{#each listaorganizaciones}}
+            {{#each listaOrganizaciones}}
                 <tr>
                     <td>{{id}}</td>
                     <td>{{razonSocial}}</td>
