Meto radiobuttons para elegir entre miembros pesado o liviano

--- a/Angular/src/app/miembro/index-miembro/index-miembro-pesado/index-miembro-pesado.component.html
+++ b/Angular/src/app/miembro/index-miembro/index-miembro-pesado/index-miembro-pesado.component.html
@@ -1,5 +1,5 @@
 <app-index-template entity="miembro">
-    <table class="table">
+    <table class="table table-bordered table-striped">
         <thead>
             <tr>
                 <th>Persona</th>
