--- a/Angular/src/app/organizacion/index-organizacion/index-organizacion-pesado/index-organizacion-pesado.component.html
+++ b/Angular/src/app/organizacion/index-organizacion/index-organizacion-pesado/index-organizacion-pesado.component.html
@@ -1,5 +1,5 @@
 <app-index-template entity="organizacion">
-    <table class="table">
+    <table class="table table-bordered table-striped">
         <thead>
             <tr>
                 <th>Razon social</th>
